# dlabel

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: branch.yml  main.yml  tag.yml
dlabel/: api.py  compose.py  dockerfile.py  main.py  traefik.py  traefik_conf.py  util.py
tests/: test_api.py  test_compose.py  test_decorator.py  test_dockerfile.py  test_simple.py  test_traefik.py
