[metadata]
name = dlabel
version = attr: dlabel.version.VERSION
url = https://github.com/wtnb75/dlabel
author = Watanabe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = docker label utilities
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: System :: Networking
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  dlabel=dlabel.main:cli

[flake8]
max-complexity = 10
max-line-length = 120
mypy-config = setup.cfg
exclude =
  build,
  dist,
  .git,
  __pycache__

[mypy]
python_version=3.13
ignore_missing_imports=true
